feat: initial project

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,113 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# testing
-/coverage
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# production
-/build
-
-# misc
+# MacOS
 .DS_Store
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Coverage directories
+coverage/
+*.lcov
+
+# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Bower dependency directory (https://bower.io/)
+bower_components/
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Next.js build output
+.next/
+out/
+
+# Nuxt.js build output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Comment out if you have an Ejected Create React App
+# /build/
+
+# Create React App
+build/
+node_modules/
+src/service-worker.ts
+src/service-worker.ts.map
+src/setupTests.ts
+src/setupTests.ts.map
+
+# NestJS files
+dist/
+src/**/*.js
+
+# Docker files
+Dockerfile
+docker-compose.yml
+.dockerignore
+**/.dockerignore
+
+# Miscellaneous
+/.env
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# TernJS
+.tern-port
+
+# Project IDE
+.idea/
+.vscode/
+*.iml
+
+# Build directories
+dist/
+tmp/
+temp/
