--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,13 +1,9 @@
+# Estágio de build
 FROM node:16 as build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run lint
-RUN npm run format
-RUN npm run build
 
-FROM nginx:alpine as production-stage
-COPY --from=build-stage /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Estágio de desenvolvimento
+CMD ["npm", "start"]
