--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,12 +12,23 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-toastify": "^4.1.0",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.24",
+    "front": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
+    "redux": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,9 +57,12 @@
     ]
   },
   "devDependencies": {
+    "@types/node-sass": "^4.11.7",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "node-sass": "^7.0.3",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8"
   }
 }
