--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,12 +1,15 @@
-FROM node:16 as build-stage
-WORKDIR /app
+FROM node:16-alpine
+
+WORKDIR /usr/src/app
+
 COPY package*.json ./
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
 
-FROM node:16-alpine as production-stage
-WORKDIR /app
-COPY --from=build-stage /app ./
-EXPOSE 3000
+EXPOSE 3001
+
 CMD ["node", "dist/main"]
