--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,32 @@
-version: '3.9'
 services:
-  frontend:
-    build: ./front
-    ports:
-      - '3000:3000'
-    environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
-    volumes:
-      - ./front:/app
-      - /app/node_modules
-    command: npm start
-    develop:
-      watch:
-        - action: sync
-          path: .
-          target: /app
-          ignore:
-            - node_modules/
-            - build/
-  
   backend:
     build: ./back
     ports:
-      - '3001:3000'
+      - "3001:3001"
     environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=123
+      - DB_NAME=corelab
+    depends_on:
+      - postgres
+
+  frontend:
+    build: ./front
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+
+  postgres:
+    image: postgres:16
+    environment:
+      POSTGRES_DB: corelab
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
     volumes:
-      - ./back:/app
-      - /app/node_modules
-    command: npm run start:dev
-    develop:
-      watch:
-        - action: sync
-          path: .
-          target: /app
-          ignore:
-            - node_modules/
-            - dist/
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
