--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
     "@types/react-toastify": "^4.1.0",
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.24",
     "front": "file:",
